# ultimate-jailbreaking-championship

./: .env.example  .gitignore  README.md  analyze_log.py  convert_chats.py  gcg.py  jailbreak.py  pyproject.toml  scorers.py  transforms.py
data/: harmbench_behaviors_text_test.csv
